# nanopore-cpp

./: .gitignore  README.md
.github/workflows/: windows-exe.yml
纳米孔/cpp_port/: CHART_FEATURES.md  CMakeLists.txt  README.md  test_chart_controls.py  test_charts.py
纳米孔/cpp_port/scripts/: scpi_mock_server.py
纳米孔/cpp_port/src/: main.cpp
纳米孔/cpp_port/src/algorithms/: DataProcessor.cpp  DataProcessor.h  DataProcessorImpl.cpp  DynamicDetectionWrapper.cpp  DynamicDetectionWrapper.h  DynamicRms.cpp  DynamicRms.h  EventDetection.cpp  EventDetection.h  Integral.cpp  Integral.h
纳米孔/cpp_port/src/analysis/: EventClassification.cpp  EventClassification.h  ReportGenerator.cpp  ReportGenerator.h  SpectralAnalysis.cpp  SpectralAnalysis.h  StatisticalAnalysis.cpp  StatisticalAnalysis.h
纳米孔/cpp_port/src/hardware/: DeviceInterface.h  DeviceManager.cpp  DeviceManager.h  Er4Device.cpp  Er4Device.h  KeithleyDevice.cpp  KeithleyDevice.h  ScpiCommunication.cpp  ScpiCommunication.h
纳米孔/cpp_port/src/tools/: ScpiSmokeTest.cpp
纳米孔/cpp_port/src/ui/: AnalysePage.cpp  AnalysePage.h  AppWindow.cpp  AppWindow.h  CollectionPage.cpp  CollectionPage.h  ControlPage.cpp  ControlPage.h  DataAnalysisDialog.cpp  DataAnalysisDialog.h  DataExportDialog.cpp  DataExportDialog.h  DeviceManagementDialog.cpp  DeviceManagementDialog.h  IdePage.cpp  IdePage.h  ParameterConfigPage.cpp  ParameterConfigPage.h  StyleManager.cpp  StyleManager.h  styles.qss
纳米孔/cpp_port/src/utils/: DataValidation.cpp  FileIO.cpp  FileIO.h  FileManager.cpp  FileManager.h  FileSystemUtils.cpp
纳米孔/代码/: V10TEST11.py  V10TEST11_带行注释.py
纳米孔/代码/c++/: dynamic_detection.cpp  dynamic_detection.h  dynamic_detection_wrapper.cpp  dynamic_detection_wrapper.pyx  setup.py  test.py
